Bug 150708 - Inserting a page break generate 2 warnings in console with debug LO
Summary: Inserting a page break generate 2 warnings in console with debug LO
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0
Keywords:
Depends on:
Blocks:
 
Reported: 2022-08-30 20:17 UTC by BogdanB
Modified: 2023-01-14 20:10 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description BogdanB 2022-08-30 20:17:54 UTC
Description:
Open a new LibreOffice Writer document. Insert a Page Break (OR Ctrl+Enter).

In the terminal, in the dbg version of LibreOffice I get this messages:

warn:legacy.osl:84958:84958:sw/source/core/access/accmap.cxx:1064: invalid event combination
warn:legacy.osl:84958:84958:sw/source/core/access/acccontext.cxx:442: fire event for disposed frame?


Steps to Reproduce:
1. See description


Actual Results:
2 warnings

Expected Results:
No warning


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 4c96abd81460977d413d4d28e891bbbac5769ede
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 1 Jegatheesan 2022-09-11 07:31:22 UTC Comment hidden (obsolete)
Comment 2 Stephen Reginold 2022-09-11 10:43:46 UTC Comment hidden (obsolete)
Comment 3 Caolán McNamara 2022-12-30 22:26:11 UTC
seems to date to:

commit 590a804e7815574a066c658f1f05875a6d0f448f
Date:   Fri Feb 27 05:38:42 2009 +0000

    CWS-TOOLING: integrate CWS sw31a11y01
    2009-01-09 11:36:08 +0100 ab  r266069 : #i97891# NSAccessibilityRoleDescription
    2009-01-07 11:01:19 +0100 od  r265955 : #i88069# emit accessibility event TEXT_ATTRIBUTE_CHANGED on change of paragraph attributes
    2009-01-06 11:50:21 +0100 od  r265904 : #i81824# methods <SwWrtShell::_FwdPara()> and <SwWrtShell::_BwdPara()>
             - avoid unnecessary cursor movements due avoid unnecessary
               accessibility events.
Comment 4 Commit Notification 2023-01-13 14:51:11 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8c60271459c4ff61bd0c3a4df0274cefe942362d

tdf#150708 if the old is CARET_OR_STATES then try updating it

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-01-13 16:12:29 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/820da3fbcc2e0e2c176ec7e202bb77ea1d5c435d

tdf#150708 downgrade a11y SAL_WARN to SAL_INFO

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 BogdanB 2023-01-14 20:10:46 UTC
No warning in
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: af8fdba1194e657237f9abc460381a1c4bc49982
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Thanks Caolan.