tdf#150708 if the old is CARET_OR_STATES then try updating it

with the additional states. Hard to know if this is a sensible approach.

Change-Id: I0d55d41c4dd9cbb17fb736e5145671cd6a8b25ec
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145460
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>